@@ -1,1 +1,5 @@
 # JavaFX
+
+javac --module-path .\javafx-sdk-21.0.6\lib --add-modules javafx.controls JanelaJavaFX.java
+
+java --module-path .\javafx-sdk-21.0.6\lib --add-modules javafx.controls JanelaJavaFX
